# yunding-v0

./: .gitignore  .pre-commit-config.yaml  README.md  prompt.xlsx  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  development.md  index.md
scripts/: analyze_data.py  benchmark_model.py  check_data.py  clean_data.py  collect_data.py  convert_data.py  dvc_flow.ps1  dvc_flow.sh  evaluate_model.py  export_data.py  export_model.py  export_trt.sh  merge_data.py  prepare_data.py  process_data.py  run_tests.ps1  run_tests.sh  setup_env.ps1  setup_env.sh  setup_env_check.py  split_data.py  train_det.py  train_lgbm.py  train_model.py  validate_data.py  visualize_data.py  visualize_results.py
src/tftassist/: __init__.py  __main__.py
src/tftassist/capture/: __init__.py  screen.py
src/tftassist/core/: __init__.py  feature.py  state.py
src/tftassist/detector/: __init__.py  yolo.py
src/tftassist/ocr/: __init__.py  paddle.py
src/tftassist/plugins/: __init__.py  hooks.py  manager.py
src/tftassist/predictor/: __init__.py  lgbm.py
src/tftassist/ui/: overlay.py
src/tftassist/vision/: detector.py
tests/: test_detector.py  test_predictor.py  test_state.py
