[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tft-assist"
version = "0.1.0"
description = "TFT 云顶之弈辅助工具"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tftassist", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyside6 = "^6.6.0"
pydantic-settings = "^2.1.0"
mss = "^9.0.1"
onnxruntime-gpu = "^1.16.3"
lightgbm = "^4.1.0"
pluggy = "^1.3.0"
numba = "^0.58.1"
ultralytics = "^8.1.0"
paddleocr = "^2.7.0.3"
duckdb = "^0.9.2"
dvc = {extras = ["gdrive"], version = "^3.41.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.9"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
dxcam = ["dxcam"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=tftassist --cov-report=term-missing" 