[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tft-assist"
version = "0.1.0"
description = "云顶之弈助手"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tftassist", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyside6 = "^6.6.0"
numpy = "^1.26.0"
opencv-python = "^4.8.0"
onnxruntime = "^1.16.0"
ultralytics = "^8.0.0"
paddlepaddle = "^2.5.0"
paddleocr = "^2.7.0"
lightgbm = "^4.1.0"
dxcam = "^0.0.5"
pydantic-settings = "^2.1.0"
mss = "^9.0.1"
pluggy = "^1.3.0"
numba = "^0.58.1"
duckdb = "^0.9.2"
dvc = {extras = ["gdrive"], version = "^3.41.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.extras]
dxcam = ["dxcam"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=tftassist --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 